8226860: [lworld][c1] runtime/valhalla/valuetypes/Ifacmp.java fails with C1

Reviewed-by: thartmann