src/hotspot/share/c1/c1_LIRGenerator.hpp
@@ -273,6 +273,9 @@ class LIRGenerator: public InstructionVisitor, public BlockClosure {
   bool needs_null_free_array_store_check(StoreIndexed* x);
   void check_null_free_array(LIRItem& array, LIRItem& value,  CodeEmitInfo* info);
   void substitutability_check(IfOp* x, LIRItem& left, LIRItem& right, LIRItem& t_val, LIRItem& f_val);
+  void substitutability_check(If* x, LIRItem& left, LIRItem& right);
+  void substitutability_check_common(Value left_val, Value right_val, LIRItem& left, LIRItem& right,
+                                     LIR_Opr equal_result, LIR_Opr not_equal_result, LIR_Opr result, CodeEmitInfo* info);
   void init_temps_for_substitutability_check(LIR_Opr& tmp1, LIR_Opr& tmp2);
 
  public:
